Fixing nav styling on mobile

--- a/source/assets/css/styles.scss
+++ b/source/assets/css/styles.scss
@@ -323,7 +323,7 @@ footer{
         display: none;
     }
     .info{
-        top: 7.5rem;
+        top: 9rem;
         border-top: 0.0625rem solid lighten($color_dark, 3%);
     }
 }
